# VulkanRayQueryTriangle

./: .gitignore  AccelerationStructures.cs  CHAT_HANDOFF.md  CMakeLists.txt  DESIGN.md  DescriptorHeap.cs  INVESTIGATION.md  ISSUE_DRAFT.md  NVIDIA_REPORT.md  Program.cs  README.md  RayQueryRenderer.cs  VulkanContext.cs  VulkanRayQueryTriangle.csproj  build.ps1  main.cpp  ray_query.slang  ray_query.spv  ray_query.spvasm  ray_query_heap.slang  ray_query_heap.spv  ray_query_heap.spvasm
Assets/Shaders/: RayQueryTriangle.slang
Helpers/: VkHelper.cs
crashdump/2026-07-09-215158/: PIPELINE_0x00001A000000001A_SHADER_0x0000190000000019_5.spv  cdl_dump.yaml
crashdump/2026-07-09-215623/: cdl_dump.yaml
crashdump/2026-07-09-220159/: cdl_dump.yaml
crashdump/2026-07-09-220354/: cdl_dump.yaml
shaderdebug/: dxc_heap_as_load.spv  dxc_heap_as_load.spvasm  dxc_heap_image.spvasm  dxc_rayquery_emulated.spvasm  dxc_rayquery_heap.spv  heap_as.spv  heap_as.spvasm  heap_as_2026_13.spv  heap_as_reassembled.spv  heap_as_reassembled.spvasm  rt13.spvasm  rt_patched.spvasm  runtime_fixed.spvasm  set_as.spv  set_as.spvasm  try_no_ext.spv
shaderdebug/src/: hlsl_rayquery_heap.hlsl
